# microservice-system-design

./: .gitignore  Makefile  README.md
entity_recognition/: Dockerfile  pyproject.toml
entity_recognition/app/: main.py  models.py  router.py  services.py  settings.py
entity_recognition/tests/: test_app_routes.py
main_service/: pyproject.toml
main_service/app/: main.py  models.py  router.py  services.py  settings.py
main_service/tests/: test_app_routes.py
sentiment_analysis/: Dockerfile  pyproject.toml
sentiment_analysis/app/: main.py  models.py  router.py  services.py  settings.py
sentiment_analysis/tests/: test_app_routes.py
tests/: docker-compose.yml  pyproject.toml  test_services.py
word_count/: Dockerfile  pyproject.toml
word_count/app/: main.py  models.py  router.py  services.py  settings.py
word_count/tests/: test_app_routes.py
